Implemented working comments and blogposts

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^5.0.1",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
     "pg": "^7.4.0",
     "pug": "^2.0.0-rc.4",
