--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "connect-session-sequelize": "^5.0.1",
+    "easy-autocomplete": "^1.3.5",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "express-session": "^1.15.6",
